--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -1676,39 +1676,70 @@
         "print (f'Foi um total de {jogador[\"total\"]} gols')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MKNTiJr-le9s",
-        "outputId": "82705546-0693-4679-cbb3-594254ae5769"
+        "id": "MKNTiJr-le9s"
       },
-      "execution_count": 40,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Nome do jogador: Hélio\n",
-            "Quantas partidas Hélio jogou? 3\n",
-            "Números de gols da 1º partida: 4\n",
-            "Números de gols da 2º partida: 0\n",
-            "Números de gols da 3º partida: 1\n",
-            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
-            "{'Nome': 'Hélio', 'gols': [4, 0, 1], 'total': 5}\n",
-            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
-            "O campo Nome tem o valor Hélio\n",
-            "O campo gols tem o valor [4, 0, 1]\n",
-            "O campo total tem o valor 5\n",
-            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
-            "O jogador Hélio jogou 3 patidas\n",
-            " => Na partida 1, fez 4 gols\n",
-            " => Na partida 2, fez 0 gols\n",
-            " => Na partida 3, fez 1 gols\n",
-            "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=\n",
-            "Foi um total de 5 gols\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 094: Crie um programa que leia nome, sexo e idade de várias pessoas,\n",
+        "# guardando os dados de cada pessoa em um dicionário e todos os dicionários em uma lista.\n",
+        "# No final, mostre:\n",
+        "# A) Quantas pessoas foram cadastradas\n",
+        "# B) A média de idade\n",
+        "# C) Uma lista com as mulheres\n",
+        "# D) Uma lista de pessoas com idade acima da média\n",
+        "# ---\n",
+        "# by geanclm in 11/04/2022 at 06:38h\n",
+        "# ---\n",
+        "# validação e análise de dados\n",
+        "# ---\n",
+        "\n",
+        "# definição de variáveis\n",
+        "pessoa = {}\n",
+        "equipe = []\n",
+        "somaIdade = 0\n",
+        "\n",
+        "# entrada de dados\n",
+        "while True:\n",
+        "    pessoa['nome'] = input('nome: ')\n",
+        "    while True:\n",
+        "        pessoa['sexo'] = input('sexo [M/F]: ').strip().upper()[0]\n",
+        "        if pessoa['sexo'] in 'MF':\n",
+        "            break\n",
+        "        else:    \n",
+        "            print ('Favor digitar uma opção válida [M/F]: ')\n",
+        "    pessoa['idade'] = int(input('idade: '))\n",
+        "    somaIdade += pessoa['idade']\n",
+        "    equipe.append(pessoa.copy())\n",
+        "    pessoa.clear()\n",
+        "    continua = str(input('continua? [S/N]: ')).upper().strip()\n",
+        "    if continua not in 'S': break\n",
+        "\n",
+        "# saída dos dados\n",
+        "print('-'*30)\n",
+        "print (f'Total de {len(equipe)} pessoa(s) cadastrada(s)')\n",
+        "print('-'*30)\n",
+        "print (f'A média de idade é de {somaIdade/len(equipe)} anos')\n",
+        "print('-'*30)\n",
+        "print (f'MULHERES CADASTRADAS')\n",
+        "for i in equipe:\n",
+        "    if i['sexo'] in 'F':\n",
+        "        print (f'{i[\"nome\"]}', end=' ')\n",
+        "        print()\n",
+        "print('-'*30)\n",
+        "print (f'Pessoas com idade acima da média')\n",
+        "for i in equipe:\n",
+        "    if i['idade'] > somaIdade/len(equipe):\n",
+        "        print (i)"
+      ],
+      "metadata": {
+        "id": "m6KRVmyV3iic"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
