--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -1740,6 +1740,129 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 095: Aprimore o desafio 93 para que ele funcione com vários jogadores,\n",
+        "# incluindo um sistema de visualização de detalhes do aproveitamento de cada jogador.\n",
+        "# ---\n",
+        "# by geanclm in 12/04/2022 at 08:08h\n",
+        "# ---\n",
+        "\n",
+        "# definição de variáveis\n",
+        "equipe = []\n",
+        "jogador = {}\n",
+        "golsPorPartida = []\n",
+        "\n",
+        "# entrada de dados\n",
+        "while True:\n",
+        "    jogador['nome'] = input('Nome do jogador: ')\n",
+        "    nPartidas = int(input(f'Quantas partidas {jogador[\"nome\"]} jogou? '))\n",
+        "    for i in range(0, nPartidas):\n",
+        "        golsPorPartida.append(int(input(f'Números de gols da {i+1}º partida: ')))\n",
+        "    jogador['gols'] = golsPorPartida[:]\n",
+        "    jogador['total'] = sum(golsPorPartida)\n",
+        "    equipe.append(jogador.copy())\n",
+        "    golsPorPartida.clear()\n",
+        "\n",
+        "    # validação de dados\n",
+        "    while True:\n",
+        "        continua = str(input('continua? [S/N]: ')).upper().strip()\n",
+        "        if continua in 'SN':\n",
+        "            break\n",
+        "        print (f'\"ERRO!\" Digite \"S\" ou \"N\"')\n",
+        "    if continua in 'N':\n",
+        "        break\n",
+        "\n",
+        "# saída de dados\n",
+        "print('-'*47)\n",
+        "print (f'cod', end=' ')\n",
+        "for i in jogador.keys():\n",
+        "    print (f'{i:<15}', end=' ')\n",
+        "print()\n",
+        "print('-'*47)\n",
+        "for i, v in enumerate(equipe):\n",
+        "    print(f'{i:>3}', end=' ')\n",
+        "    for j in v.values():\n",
+        "        print (f'{str(j):<15}', end=' ')\n",
+        "    print()\n",
+        "print('-'*47)\n",
+        "\n",
+        "# análise de dados\n",
+        "while True:    \n",
+        "    consulta = int(input('dados de qual jogador? (999 para sair): '))\n",
+        "    if consulta < (len(equipe)):\n",
+        "            print('-'*47)\n",
+        "            print (f'DADOS ESTATÍSTICOS DO JOGADOR {equipe[consulta][\"nome\"]}')            \n",
+        "            for i in range(len(equipe)):\n",
+        "                print (f'No jogo {i+1} fez {equipe[i][\"total\"]} gols')\n",
+        "    if consulta == 999:\n",
+        "        break\n",
+        "    print('-'*47)\n",
+        "print('-'*47)\n",
+        "print (f'{\"---| SISTEMAS GCLM - VOLTE SEMPRE |---\":^47}')\n",
+        "print('-'*47)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "quXeyA9NDThK",
+        "outputId": "6f8a62ee-177e-4aca-cf04-658008c4e743"
+      },
+      "execution_count": 224,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dados de qual jogador? (999 para sair): 3\n",
+            "-----------------------------------------------\n",
+            "DADOS ESTATÍSTICOS DO JOGADOR Madeira\n",
+            "No jogo 1 fez 6 gols\n",
+            "No jogo 2 fez 4 gols\n",
+            "No jogo 3 fez 10 gols\n",
+            "No jogo 4 fez 7 gols\n",
+            "-----------------------------------------------\n",
+            "dados de qual jogador? (999 para sair): 4\n",
+            "-----------------------------------------------\n",
+            "dados de qual jogador? (999 para sair): 999\n",
+            "-----------------------------------------------\n",
+            "    ---| SISTEMAS GCLM - VOLTE SEMPRE |---     \n",
+            "-----------------------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "equipe"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "82Io7n27wuCt",
+        "outputId": "7d40eb47-cb27-4819-da9b-fab887fea5d8"
+      },
+      "execution_count": 223,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[{'gols': [1, 2, 3], 'nome': 'Gean', 'total': 6},\n",
+              " {'gols': [3, 1], 'nome': 'Carlos', 'total': 4},\n",
+              " {'gols': [1, 2, 3, 4], 'nome': 'Luciano', 'total': 10},\n",
+              " {'gols': [2, 4, 1], 'nome': 'Madeira', 'total': 7}]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 223
+        }
+      ]
     }
   ]
 }
