Aula 20 – Funções (Parte 1)
 total de 96 exercícios concluidos

--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -1811,7 +1811,7 @@
         "id": "quXeyA9NDThK",
         "outputId": "6f8a62ee-177e-4aca-cf04-658008c4e743"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1836,31 +1836,139 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula 20 – Funções (Parte 1)"
+      ],
+      "metadata": {
+        "id": "26pUs0pTUJxu"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "equipe"
+        "def soma1 (x,y):\n",
+        "    return (x+y)"
+      ],
+      "metadata": {
+        "id": "Dt1JyBVmpIbA"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def soma2 (*args):\n",
+        "    texto = (f'Entrada dos valores {args}. Soma igual a {sum(args)}. Total de {len(args)} números digitados')\n",
+        "    return texto"
+      ],
+      "metadata": {
+        "id": "YjFioRmOUMK3"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dobra (lista):\n",
+        "    for i in range (len(lista)):\n",
+        "        lista[i] *= 2\n",
+        "    return lista"
+      ],
+      "metadata": {
+        "id": "u0yhFa1itnNa"
+      },
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soma1(4,5)"
+      ],
+      "metadata": {
+        "id": "VSyBvb6bpdxI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soma2 (4,5,6,7,8,9,0)"
+      ],
+      "metadata": {
+        "id": "7kj6xXXwomxS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dobra([1,2,3,4,5,6,7,8,9])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "82Io7n27wuCt",
-        "outputId": "7d40eb47-cb27-4819-da9b-fab887fea5d8"
+        "id": "GOyXHYFGuL9f",
+        "outputId": "7061430c-400e-466d-d6b1-8adf058d6c24"
       },
-      "execution_count": 223,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[{'gols': [1, 2, 3], 'nome': 'Gean', 'total': 6},\n",
-              " {'gols': [3, 1], 'nome': 'Carlos', 'total': 4},\n",
-              " {'gols': [1, 2, 3, 4], 'nome': 'Luciano', 'total': 10},\n",
-              " {'gols': [2, 4, 1], 'nome': 'Madeira', 'total': 7}]"
+              "[2, 4, 6, 8, 10, 12, 14, 16, 18]"
             ]
           },
           "metadata": {},
-          "execution_count": 223
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 096: Faça um programa que tenha uma função chamada área(),\n",
+        "# que receba as dimensões de um terreno retangular (largura e comprimento) e mostre a área do terreno.\n",
+        "# by geanclm in 13/04/2022 at 9h\n",
+        "\n",
+        "# função para calcular a área do terreno\n",
+        "def a(x,y):\n",
+        "    a = x*y\n",
+        "    return a\n",
+        "\n",
+        "# entrada de dados\n",
+        "l = float(input('digite a largura do terreno [m]: '))\n",
+        "c = float(input('digite o comprimento do terreno [m]: '))\n",
+        "\n",
+        "# saída de dados\n",
+        "print ('-'*33)\n",
+        "print (f'''O terreno de {l}m x {c}m\n",
+        " tem {a(l,c)}m²''')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AAdjwcTRyltT",
+        "outputId": "d74725a4-a41b-460b-f74c-675c5b13c75f"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---------------------------------\n",
+            "O terreno de 12.5m x 23.4m\n",
+            " tem 292.5m²\n"
+          ]
         }
       ]
     }
