--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -5,7 +5,12 @@
     "colab": {
       "name": "Curso em Vídeo - PYTHON 3 - MUNDO 3.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [
+        "Iv1JvJMxr_3l",
+        "ORH0FziVvh-Q",
+        "RWEDdX2metCk",
+        "VWQFmfkF6tHR"
+      ]
     },
     "kernelspec": {
       "name": "python3",
@@ -1853,7 +1858,7 @@
       "metadata": {
         "id": "Dt1JyBVmpIbA"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1866,7 +1871,7 @@
       "metadata": {
         "id": "YjFioRmOUMK3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1880,7 +1885,7 @@
       "metadata": {
         "id": "u0yhFa1itnNa"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1917,7 +1922,7 @@
         "id": "GOyXHYFGuL9f",
         "outputId": "7061430c-400e-466d-d6b1-8adf058d6c24"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1953,21 +1958,118 @@
         " tem {a(l,c)}m²''')"
       ],
       "metadata": {
+        "id": "AAdjwcTRyltT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 097: Faça um programa que tenha uma função chamada escreva(),\n",
+        "# que receba um texto qualquer como parâmetro e mostre uma mensagem com tamanho adaptável.\n",
+        "# by geanclm in 13/04/2022 at 18:40h\n",
+        "\n",
+        "def escreva(texto):\n",
+        "    texto = ' '+texto+' '\n",
+        "    print('-'*(len(texto)))\n",
+        "    print(f'{texto}')\n",
+        "    print('-'*(len(texto)))\n",
+        "\n",
+        "escreva('Gean Carlos')\n",
+        "escreva('Cientista de dados')\n",
+        "escreva('Empreendedor')"
+      ],
+      "metadata": {
+        "id": "9FtsL5qi3HzC",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "AAdjwcTRyltT",
-        "outputId": "d74725a4-a41b-460b-f74c-675c5b13c75f"
+        "outputId": "383bcb43-d27b-40ee-8e5a-afc19f1b7df7"
       },
-      "execution_count": 37,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "---------------------------------\n",
-            "O terreno de 12.5m x 23.4m\n",
-            " tem 292.5m²\n"
+            "-------------\n",
+            " Gean Carlos \n",
+            "-------------\n",
+            "--------------------\n",
+            " Cientista de dados \n",
+            "--------------------\n",
+            "--------------\n",
+            " Empreendedor \n",
+            "--------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 098: Faça um programa que tenha uma função chamada contador(),\n",
+        "# que receba três parâmetros: início, fim e passo. Seu programa tem que realizar\n",
+        "# três contagens através da função criada:\n",
+        "# by geanclm in 14/04/2022 at 6h\n",
+        "from time import sleep\n",
+        "\n",
+        "def contador (start, end, step):\n",
+        "    if step == 0:\n",
+        "        step = 1\n",
+        "    if start > end:\n",
+        "        step *= -1\n",
+        "        print (f'contagem de {start} até {end} com passo de {step}')\n",
+        "        sleep(2)\n",
+        "        for i in range(start, end-1, step):\n",
+        "            print (i, end=' ', flush=True)\n",
+        "            sleep(0.5)\n",
+        "    else:\n",
+        "        print (f'contagem de {start} até {end} com passo de {step}')\n",
+        "        sleep(2)\n",
+        "        for i in range(start, end+1, step):\n",
+        "            print (i, end=' ', flush=True)\n",
+        "            sleep(0.5)\n",
+        "    print()\n",
+        "    n = int((abs(end-start))/(abs(step)))+1 # quantidade de termos (PA)\n",
+        "    print('--'*(n))\n",
+        "\n",
+        "contador(1,10,1)\n",
+        "contador(10,0,2)\n",
+        "\n",
+        "print ('Agora é sua de definir a sequência')\n",
+        "start = int(input('valor inicial da contagem: '))\n",
+        "end = int(input('valor final da contagem: '))\n",
+        "step = int(input('passo: '))\n",
+        "contador (start,end,step)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RO42Rxxu7uff",
+        "outputId": "199ebb44-3b98-480d-c732-f81ce02d3497"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "contagem de 1 até 10 com passo de 1\n",
+            "1 2 3 4 5 6 7 8 9 10 \n",
+            "--------------------\n",
+            "contagem de 10 até 0 com passo de -2\n",
+            "10 8 6 4 2 0 \n",
+            "------------\n",
+            "Agora é sua de definir a sequência\n",
+            "valor inicial da contagem: -20\n",
+            "valor final da contagem: -1\n",
+            "passo: 1\n",
+            "contagem de -20 até -1 com passo de 1\n",
+            "-20 -19 -18 -17 -16 -15 -14 -13 -12 -11 -10 -9 -8 -7 -6 -5 -4 -3 -2 -1 \n",
+            "----------------------------------------\n"
           ]
         }
       ]
