--- a/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
+++ b/Python/MUNDO 3/Curso_em_Vídeo_PYTHON_3_MUNDO_3.ipynb
@@ -1987,7 +1987,7 @@
         },
         "outputId": "383bcb43-d27b-40ee-8e5a-afc19f1b7df7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2014,7 +2014,6 @@
         "# três contagens através da função criada:\n",
         "# by geanclm in 14/04/2022 at 6h\n",
         "from time import sleep\n",
-        "\n",
         "def contador (start, end, step):\n",
         "    if step == 0:\n",
         "        step = 1\n",
@@ -2045,31 +2044,467 @@
         "contador (start,end,step)"
       ],
       "metadata": {
+        "id": "RO42Rxxu7uff"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 099: Faça um programa que tenha uma função chamada maior(),\n",
+        "# que receba vários parâmetros com valores inteiros. Seu programa tem que analisar\n",
+        "# todos os valores e dizer qual deles é o maior.\n",
+        "# ---\n",
+        "# by geanclm in 15/04/2022 in 06:41h\n",
+        "# ---\n",
+        "import random\n",
+        "from time import sleep\n",
+        "def maior(start,end):\n",
+        "    lista = []\n",
+        "    for i in range(6,0,-1):\n",
+        "        lista = sorted((random.sample(range(start,end),i-1)))\n",
+        "        print('Analisando os valores gerados...')\n",
+        "        sleep(1)\n",
+        "        if len(lista) > 0:\n",
+        "            print(f'{lista} |-> selecionado(s) {len(lista)} valor(es).')\n",
+        "            print (f'Maior valor: {max(lista)}')\n",
+        "        else:\n",
+        "            print(f'Nenhum valor selecionado. Não há dados na lista.')\n",
+        "            print (f'Maior valor: 0')\n",
+        "        print('-'*33)\n",
+        "        lista.clear()  \n",
+        "# digitar o valor inicial e final do espaço amostral de valores\n",
+        "# a função gera seis listas de números aleatórios e retorna o maior valor de cada série\n",
+        "# maior (valor inicial, valor final)\n",
+        "maior(1,60)"
+      ],
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "RO42Rxxu7uff",
-        "outputId": "199ebb44-3b98-480d-c732-f81ce02d3497"
+        "id": "XiFTikCOizfU",
+        "outputId": "c0679600-088e-4f58-b022-c04d39aef130"
       },
-      "execution_count": 15,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "contagem de 1 até 10 com passo de 1\n",
-            "1 2 3 4 5 6 7 8 9 10 \n",
-            "--------------------\n",
-            "contagem de 10 até 0 com passo de -2\n",
-            "10 8 6 4 2 0 \n",
-            "------------\n",
-            "Agora é sua de definir a sequência\n",
-            "valor inicial da contagem: -20\n",
-            "valor final da contagem: -1\n",
-            "passo: 1\n",
-            "contagem de -20 até -1 com passo de 1\n",
-            "-20 -19 -18 -17 -16 -15 -14 -13 -12 -11 -10 -9 -8 -7 -6 -5 -4 -3 -2 -1 \n",
-            "----------------------------------------\n"
+            "Analisando os valores gerados...\n",
+            "[2, 6, 11, 23, 43] |-> selecionado(s) 5 valor(es).\n",
+            "Maior valor: 43\n",
+            "---------------------------------\n",
+            "Analisando os valores gerados...\n",
+            "[6, 43, 49, 53] |-> selecionado(s) 4 valor(es).\n",
+            "Maior valor: 53\n",
+            "---------------------------------\n",
+            "Analisando os valores gerados...\n",
+            "[18, 43, 57] |-> selecionado(s) 3 valor(es).\n",
+            "Maior valor: 57\n",
+            "---------------------------------\n",
+            "Analisando os valores gerados...\n",
+            "[32, 41] |-> selecionado(s) 2 valor(es).\n",
+            "Maior valor: 41\n",
+            "---------------------------------\n",
+            "Analisando os valores gerados...\n",
+            "[27] |-> selecionado(s) 1 valor(es).\n",
+            "Maior valor: 27\n",
+            "---------------------------------\n",
+            "Analisando os valores gerados...\n",
+            "Nenhum valor selecionado. Não há dados na lista.\n",
+            "Maior valor: 0\n",
+            "---------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Exercício Python 100: Faça um programa que tenha uma lista chamada números\n",
+        "# e duas funções chamadas sorteia() e somaPar(). A primeira função vai sortear\n",
+        "# 5 números e vai colocá-los dentro da lista e a segunda função vai mostrar a\n",
+        "# soma entre todos os valores pares sorteados pela função anterior.\n",
+        "# by geanclm in 15/04/2022 at 07:41h\n",
+        "\n",
+        "import random\n",
+        "from time import sleep\n",
+        "\n",
+        "# função para sortear cinco valores de uma lista aleatória\n",
+        "def sorteia(start,end):\n",
+        "    lista = []\n",
+        "    lista = sorted((random.sample(range(start,end),5)))\n",
+        "    return lista\n",
+        "\n",
+        "# função para somar os valores da lista gerada\n",
+        "def somaPar(lista):\n",
+        "    l = []\n",
+        "    l = lista\n",
+        "    somaPar = 0\n",
+        "    for i in lista:\n",
+        "        if i%2 == 0:\n",
+        "            somaPar += i\n",
+        "    print ('-'*33)\n",
+        "    print (f'SORTEANDO 5 valores da lista: {lista}')\n",
+        "    sleep(1)\n",
+        "    print (f'Soma de todos os PARES: {somaPar}')\n",
+        "    print ('-'*33)\n",
+        "\n",
+        "# saída dos dados\n",
+        "lista = [] \n",
+        "lista = sorteia(1,10) # digitar aqui o range de valores para gerar a série\n",
+        "somaPar(lista)"
+      ],
+      "metadata": {
+        "id": "6C67f8O5m3Oc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Aula 21 – Funções (Parte 2)"
+      ],
+      "metadata": {
+        "id": "HwsZmMBPLvGE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# interactive help"
+      ],
+      "metadata": {
+        "id": "0vw6WszfLwaH"
+      },
+      "execution_count": 151,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# primeira opção: diretamente no terminal\n",
+        "# > python\n",
+        "# >>> help()\n",
+        "# help> print"
+      ],
+      "metadata": {
+        "id": "2P0ui1YBpA-v"
+      },
+      "execution_count": 150,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(print)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xzc2Ur5LpC2-",
+        "outputId": "7bbe39b8-ddf4-4b62-cb5f-e6bb663660f5"
+      },
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function print in module builtins:\n",
+            "\n",
+            "print(...)\n",
+            "    print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+            "    \n",
+            "    Prints the values to a stream, or to sys.stdout by default.\n",
+            "    Optional keyword arguments:\n",
+            "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+            "    sep:   string inserted between values, default a space.\n",
+            "    end:   string appended after the last value, default a newline.\n",
+            "    flush: whether to forcibly flush the stream.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(len)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y_u_foEWMxW-",
+        "outputId": "dcf34e2e-9c15-49fb-e8c2-bbb5c5e58206"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function len in module builtins:\n",
+            "\n",
+            "len(obj, /)\n",
+            "    Return the number of items in a container.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(print.__doc__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ro63nhj-cHAl",
+        "outputId": "830ab700-279c-48d1-dc80-29590f7dcced"
+      },
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+            "\n",
+            "Prints the values to a stream, or to sys.stdout by default.\n",
+            "Optional keyword arguments:\n",
+            "file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+            "sep:   string inserted between values, default a space.\n",
+            "end:   string appended after the last value, default a newline.\n",
+            "flush: whether to forcibly flush the stream.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# docstring\n",
+        "def contador (start,end,step):\n",
+        "    \"\"\"\n",
+        "    -> Faz uma contagem e mostra a sequência na tela\n",
+        "    param start: valor inicial da série [ex: 1]\n",
+        "    param end: valor final da série [ex: 10]\n",
+        "    param step: passo da contagem [ex: 2]\n",
+        "    return: sem retorno [saída automatica do resultado]\n",
+        "    by geanclm in 15/04/2022 at 11:22h\n",
+        "    \"\"\"\n",
+        "    c = 1\n",
+        "    while c <= end:\n",
+        "        print(f'{c}', end=' ')\n",
+        "        c += 1\n",
+        "contador (1,10,2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tUf5xpxMhsxv",
+        "outputId": "1cb3367d-623b-4f3a-cec3-d078af4b4bae"
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 2 3 4 5 6 7 8 9 10 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "help(contador)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hZW0iR-XlLCd",
+        "outputId": "8e024825-a3aa-46c1-a1a3-531f557c6a92"
+      },
+      "execution_count": 142,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on function contador in module __main__:\n",
+            "\n",
+            "contador(start, end, step)\n",
+            "    -> Faz uma contagem e mostra a sequência na tela\n",
+            "    param start: valor inicial da série [ex: 1]\n",
+            "    param end: valor final da série [ex: 10]\n",
+            "    param step: passo da contagem [ex: 2]\n",
+            "    return: sem retorno [saída automatica do resultado]\n",
+            "    by geanclm in 15/04/2022 at 11:22h\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# parâmetros opcionais\n",
+        "def soma(a=0,b=0,c=0):\n",
+        "    s = a+b+c\n",
+        "    print(f'A soma de {a} + {b} + {c} = {s}')\n",
+        "soma(3,2,5)\n",
+        "soma(8,4)\n",
+        "soma (a=1,c=2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x6GI441OmzAa",
+        "outputId": "cbf28402-9edc-4db3-a509-e117bb4db3a7"
+      },
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A soma de 3 + 2 + 5 = 10\n",
+            "A soma de 8 + 4 + 0 = 12\n",
+            "A soma de 1 + 0 + 2 = 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# escopo de variáveis\n",
+        "def teste (x):\n",
+        "    global n\n",
+        "    n = 22 # variável n local\n",
+        "    x = 8 # variável local\n",
+        "    print ('-'*33)\n",
+        "    print (f'Na função teste() n = {n}')\n",
+        "    print (f'Na função teste() x = {x}')\n",
+        "    print ('-'*33)\n",
+        "\n",
+        "# programa principal\n",
+        "n = 2 # variável global\n",
+        "# print (f'No programa principal x = {x}') # variável local da função teste()\n",
+        "teste(n)\n",
+        "print (f'No programa principal n = {n}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ow6D5Ta4nSK3",
+        "outputId": "78f0e0cd-578d-42aa-8ceb-8b1c24f0f503"
+      },
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "---------------------------------\n",
+            "Na função teste() n = 22\n",
+            "Na função teste() x = 8\n",
+            "---------------------------------\n",
+            "No programa principal n = 22\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# escopo de chamada de função"
+      ],
+      "metadata": {
+        "id": "wttxGezDp20p"
+      },
+      "execution_count": 162,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# retorno de valores\n",
+        "def soma(a=0,b=0,c=0):\n",
+        "    s = a+b+c\n",
+        "    return s\n",
+        "r1 = soma(3,2,5)\n",
+        "r2 = soma(2,2)\n",
+        "r3 = soma(6)\n",
+        "print (f'Os resultados da função soma() são: {r1}, {r2} e {r3}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Dv5BhhsNuKUQ",
+        "outputId": "759d4c1c-3d33-4aeb-b27f-ab302500aa85"
+      },
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Os resultados da função soma() são: 10, 4 e 6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fatorial(n=0):\n",
+        "    f = 1 # variável local\n",
+        "    for i in range (1, n+1):\n",
+        "        f *= i\n",
+        "    return f"
+      ],
+      "metadata": {
+        "id": "sTMcoISQwyLe"
+      },
+      "execution_count": 177,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 5\n",
+        "print (f'O fatorial de {n} é igual a {fatorial(n)}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SCVdBdEvxsWv",
+        "outputId": "e89fa973-8102-476d-8e98-a6487a61ea6a"
+      },
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "O fatorial de 5 é igual a 120\n"
           ]
         }
       ]
